<resources>
    <string name="app_name">FiniteStateMachine</string>
    <string name="start_position">Alarm disarmed, all unlocked</string>
    <string name="lock1">lock</string>
    <string name="lock2">lock2</string>
    <string name="unlock1">unlock</string>
    <string name="unlock2">unlock2</string>



    <!-- Using like Data-->

    <string name="alarm_disarmed_all_unlocked">Alarm disarmed, all unlocked</string>
    <string name="alarm_disarmed_driver_unlocked">Alarm disarmed, driver unlocked</string>
    <string name="alarm_disarmed_all_locked">Alarm disarmed, all locked</string>
    <string name="alarm_armed_all_locked">Alarm armed, all locked</string>
</resources>
